--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body{
   margin: 10px;
   color: #BE9FE1;
   cursor: pointer;
+  transition: 0.5s ease-in-out;
 }
 .fa-clone{
   position: relative;
